--- a/Module02/next/first-next/package.json
+++ b/Module02/next/first-next/package.json
@@ -9,11 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
     "@tanstack/react-query": "^5.56.2",
     "axios": "^1.7.7",
     "next": "14.2.13",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.53.0",
+    "sweetalert2": "^11.14.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
