--- a/Module02/next/first-next/package.json
+++ b/Module02/next/first-next/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/supabase-js": "^2.45.4",
     "@tanstack/react-query": "^5.56.2",
     "axios": "^1.7.7",
+    "js-cookie": "^3.0.5",
     "next": "14.2.13",
     "ol": "^10.2.1",
     "react": "^18",
@@ -21,6 +24,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
