--- a/Module03/expense-tracker-app/my-turborepo/package.json
+++ b/Module03/expense-tracker-app/my-turborepo/package.json
@@ -5,7 +5,9 @@
     "build": "turbo build",
     "dev": "turbo dev",
     "lint": "turbo lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "dev:api": "cd apps/api && npm run dev",
+    "dev:web": "cd apps/web && npm run dev"
   },
   "devDependencies": {
     "prettier": "^3.2.5",
