--- a/Module03/sayur-kita-v2-api/package.json
+++ b/Module03/sayur-kita-v2-api/package.json
@@ -14,11 +14,13 @@
   "dependencies": {
     "@prisma/client": "^5.21.1",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "express": "^4.21.1",
     "prisma": "^5.21.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.7.9",
