--- a/Module03/sayur-kita-v2-api/package.json
+++ b/Module03/sayur-kita-v2-api/package.json
@@ -13,10 +13,14 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^5.21.1",
+    "@supabase/supabase-js": "^2.45.6",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.21.1",
-    "prisma": "^5.21.1"
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
+    "prisma": "^5.21.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -24,6 +28,8 @@
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.7.9",
+    "@types/passport": "^1.0.16",
+    "@types/passport-google-oauth20": "^2.0.16",
     "dotenv": "^16.4.5",
     "jsonwebtoken": "^9.0.2",
     "ts-node": "^10.9.2",
