--- a/Module03/sayur-kita-v2-api/tsconfig.json
+++ b/Module03/sayur-kita-v2-api/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "es2016",
     "module": "commonjs",
+    "moduleResolution": "Node",
     "outDir": "./dist",
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true,
