--- a/Module03/sayur-kita-v2-web/package.json
+++ b/Module03/sayur-kita-v2-web/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.1",
     "axios": "^1.7.7",
     "next": "15.0.1",
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
-    "sweetalert2": "^11.14.4"
+    "react-hook-form": "^7.53.1",
+    "sweetalert2": "^11.14.4",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
