--- a/Module03/sayur-kita-v2-api/package.json
+++ b/Module03/sayur-kita-v2-api/package.json
@@ -4,7 +4,9 @@
   "main": "app.ts",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/app.js",
+    "start:prod": "node dist/app.js",
+    "prisma:migrate" : "prisma migrate dev",
+    "prisma:generate" : "prisma generate",
     "dev": "ts-node src/app.ts"
   },
   "keywords": [],
