--- a/Module03/sayur-kita-v2-api/package.json
+++ b/Module03/sayur-kita-v2-api/package.json
@@ -22,8 +22,10 @@
     "ejs": "^3.1.10",
     "express": "^4.21.1",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.16",
     "prisma": "^5.21.1",
+    "redis": "^4.7.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
