--- a/Module03/sayur-kita-v2-api/package.json
+++ b/Module03/sayur-kita-v2-api/package.json
@@ -17,6 +17,7 @@
     "@prisma/client": "^5.21.1",
     "@supabase/supabase-js": "^2.45.6",
     "bcryptjs": "^2.4.3",
+    "bull": "^4.16.3",
     "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
     "ejs": "^3.1.10",
@@ -36,6 +37,7 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.7.9",
+    "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.16",
     "@types/nodemailer-express-handlebars": "^4.0.5",
     "dotenv": "^16.4.5",
