--- a/Module03/sayur-kita-v2-api/package.json
+++ b/Module03/sayur-kita-v2-api/package.json
@@ -7,7 +7,8 @@
     "start:prod": "node dist/app.js",
     "prisma:migrate": "prisma migrate dev",
     "prisma:generate": "prisma generate",
-    "dev": "ts-node src/app.ts"
+    "dev": "ts-node src/app.ts",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -16,17 +17,20 @@
   "dependencies": {
     "@prisma/client": "^5.21.1",
     "@supabase/supabase-js": "^2.45.6",
+    "@types/jest": "^29.5.14",
     "bcryptjs": "^2.4.3",
     "bull": "^4.16.3",
     "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
+    "jest": "^29.7.0",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.16",
     "prisma": "^5.21.1",
     "redis": "^4.7.0",
+    "ts-jest": "^29.2.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
