--- a/Module03/sayur-kita-v2-api/package.json
+++ b/Module03/sayur-kita-v2-api/package.json
@@ -18,6 +18,7 @@
     "@prisma/client": "^5.21.1",
     "@supabase/supabase-js": "^2.45.6",
     "@types/jest": "^29.5.14",
+    "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "bull": "^4.16.3",
     "cloudinary": "^2.5.1",
